--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="show"
-            type="com.loktra.tvmaze.models.TvShow" />
+            type="com.loktra.tvmaze.repository.models.TvShow" />
     </data>
 
     <android.support.constraint.ConstraintLayout
