--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.MainActivity">
 
     <data>
@@ -10,6 +10,10 @@
         <variable
             name="show"
             type="com.loktra.tvmaze.repository.models.TvShow" />
+
+        <variable
+            name="filterEvent"
+            type="com.loktra.tvmaze.communicator.FilterEventListener" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -18,8 +22,8 @@
 
         <include
             android:id="@+id/content"
-            bind:show="@{show}"
-            layout="@layout/content_main" />
+            layout="@layout/content_main"
+            bind:show="@{show}" />
 
         <ProgressBar
             android:id="@+id/main_progressbar"
@@ -30,6 +34,19 @@
             bind:layout_constraintEnd_toEndOf="parent"
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/filterFloatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:onClick="@{(v) -> filterEvent.onClickFilter()}"
+            bind:layout_constraintBottom_toBottomOf="parent"
+            bind:layout_constraintEnd_toEndOf="parent"
+            bind:srcCompat="@drawable/ic_filter" />
+
 
     </android.support.constraint.ConstraintLayout>
 </layout>
