--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,14 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:background="@drawable/shape_selector"
             android:onClick="@{(v) -> filterEvent.onClickFilter()}"
+            android:tint="@android:color/black"
+            android:tintMode="src_in"
             bind:layout_constraintBottom_toBottomOf="parent"
             bind:layout_constraintEnd_toEndOf="parent"
-            bind:srcCompat="@drawable/ic_filter" />
+            bind:srcCompat="@drawable/ic_filter"
+            tools:targetApi="lollipop" />
 
 
     </android.support.constraint.ConstraintLayout>
