--- a/app/src/main/res/layout/tvshow_item_view.xml
+++ b/app/src/main/res/layout/tvshow_item_view.xml
@@ -13,7 +13,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ee444444"
+        android:background="@color/colorBgLight"
         android:padding="10dp">
 
         <ImageView
